# bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
config/: media.production.example.json  relay.hub.example.json  system.json  system.panel-lan.example.json  system.runner-channel.example.json  system.runner-proxy.example.json  task_models.json  team_api.json.example  team_hosts.channel.example.json  team_hosts.json  users.json
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/: CONFIG-UI.md  OPERATIONS.md
plans/: 2026-05-26-coding-agent-system.md  2026-05-26-story-agent-system.md  2026-05-27-team-email-und-oeffnungszeiten.md  2026-05-30-web-panel-config-ui.md  2026-05-31-status-mail-task-assignee.md  README.md  TEMPLATE.md  mvp-und-entscheidungen.md  runtime-teams.md
scripts/: apply-install-profile.py  bot-up.sh  install-debian.sh  lock-deps.sh  verify-setup.sh
src/bot/: __init__.py  cli.py  cli_auth.py  cli_backup.py  cli_broker.py  cli_browser.py  cli_chat.py  cli_crawl.py  cli_deploy.py  cli_git.py  cli_hours.py  cli_llm.py  cli_mail.py  cli_media.py  cli_msg.py  cli_qdrant.py  cli_relay.py  cli_run.py  cli_story.py  cli_tasks.py  cli_team.py  cli_up.py  cli_web.py  dashboard.py  health.py  team_init.py
src/bot/agents_mgmt/: __init__.py  service.py
src/bot/approval/: __init__.py  status.py
src/bot/audit/: __init__.py  store.py
src/bot/backup/: __init__.py  service.py
src/bot/browser/: __init__.py  config.py  service.py
src/bot/channel/: __init__.py  client_link.py  hub_config.py  incoming.py  panel_connector.py  panel_rpc.py  protocol.py  queue.py  relay.py  rpc_queue.py  runner_manager.py  satellite.py  urls.py
src/bot/chat/: __init__.py  direct_agent.py  direct_chat.py  mirror.py  orchestrator_bridge.py  store.py  team_feed.py
src/bot/config/: __init__.py  loader.py  media_admin.py  (+3 more)
teams/coding/: git.json.example  team.json
teams/demo/: crawl.json.example  email.json.example  git.json.example  hours.json.example  hours.master.json.example  integrations.json.example  media.json.example  story_review.json.example  team.json
teams/story/: team.json
teams/story-demo/: README.md  playwright.json  story_review.json  team.json
tests/: conftest.py  test_agent_llm_model.py  test_agent_tools.py  test_agent_tools_config.py  test_approval.py  test_audit.py  test_audit_middleware.py  test_auth_cli.py  test_backup.py  test_bot.py  test_browser.py  test_browser_channel.py  test_channel.py  test_chat.py  test_chat_audit.py  test_cli.py  test_cli_msg.py  test_cli_up.py  test_config.py  test_config_writers.py  test_crawl_channel.py  test_direct_chat_handler.py  test_e2e_pipeline.py  test_health.py  test_hosts_admin.py  test_hosts_settings_routes.py  test_hours.py  test_inbox_watch.py  test_install_profile.py  test_llm.py  test_llm_proxy.py  test_mail.py  test_mail_plan_mvp.py  test_mail_status.py  test_media_admin.py  test_messages.py  test_ops_upgrade.py  test_phase3.py  test_pipeline_presets.py  test_qdrant.py  (+25 more)
(+223 files in other folders)
