[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.1.0"
description = "Python-Projekt (Skeleton)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Team" }]
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "ebooklib>=0.18",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
playwright = ["playwright>=1.49"]
crawl = ["crawl4ai>=0.4"]
dev = [
    "pytest>=8.0",
    "playwright>=1.49",
    "crawl4ai>=0.4",
]

[project.scripts]
bot = "bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
