[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.1.0"
description = "Multi-Agent-Runtime mit Team-Runner und Web-Panel"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Team" }]
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "httpx>=0.28.1",
    "qdrant-client>=1.12",
    "ebooklib>=0.18",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
playwright = ["playwright>=1.49"]
crawl = ["crawl4ai>=0.4"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "playwright>=1.49",
    "crawl4ai>=0.4",
]

# Optionale Extras: playwright/crawl nicht im Standard-Deploy (siehe README, docs/OPERATIONS.md).

[project.scripts]
bot = "bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
[tool.mypy]
python_version = "3.11"
files = ["src/bot"]
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = false
disable_error_code = ["misc", "arg-type", "attr-defined", "assignment", "union-attr", "var-annotated"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
